tests/ui/parser/bad-value-ident-false.rs
fn false() { } //~ ERROR expected identifier, found keyword `false`
fn main() { }

// ferrocene-annotations: fls_21vnag69kbwe
// Identifiers
